src/ImageSlider/ImageSlider.css
.slider-container {
    position: relative;
    width: 100%;
    min-width: 200px;
    max-width: 600px;
    height: 450px;
    display: flex;
    justify-content: center;
    align-items: center;
}

.slider__image-container {
    width: 100%;
    height: 100%;
    display: flex;
    overflow: hidden;
    box-shadow: 0 0 7px #666;
    border-radius: 0.5rem;
}

.slider-container img {
    z-index: -1;
    /*border-radius: 0.5rem;*/
    user-select: none;
    flex-grow: 0;
    flex-shrink: 0;
    transition: all .4s ease-in-out;
}

.slider-controls-container {
    position: absolute;
    bottom: 1.6rem;
    display: flex;
    justify-content: center;
    align-items: center;
    gap: 1.2rem;
}

.slider-control {
    all: unset;
    position: absolute;
    z-index: 10;
    width: 3rem;
    height: 3rem;
    cursor: pointer;
    color: aliceblue;
    fill: darkorange;
    stroke: aliceblue;
    filter: drop-shadow(1px 1px 3px rgba(0, 0, 0, 0.2));
    transition: all .3s ease-in-out;
}

.slider-control:hover > *,
.slider-control:focus-visible > * {
    animation: squish .2s ease-in-out;
}

.slider-control:hover,
.slider-control:focus-visible {
    scale: 1.1;
    color: var(--btn-primary);
}

.slider-control-left {
    left: 1.6rem;
}

.slider-control-right {
    right: 1.6rem;
}

.slider-indicators-container {
    z-index: 10;
    display: flex;
    gap: 0.6rem;
}

.slider-indicator {
    height: 8px;
    width: 8px;
    border-radius: 50%;
    border: none;
    outline: none;
    cursor: pointer;
    background-color: aliceblue;
    transition: all .2s ease-in-out;
}

.slider-indicator:hover,
.slider-indicator:focus-visible {
    background-color: darkorange;

}

.slider-indicator--active {
    scale: 1.6;
    background-color: darkorange;
}

.slider-img--onScreen {
    transform: translateX(0);
}

.slider-img--offScreen-left {
    transform: translateX(-100%);
    opacity: 0;
}

.slider-img--offScreen-right {
    transform: translateX(100%);
    opacity: 0;
}

@keyframes squish {
    50% {
        scale: 1.4 1;
    }
}

